--- a/dino_game.css
+++ b/dino_game.css
@@ -1,20 +1,22 @@
 .canvas{
-  width: 800px;
+  width: 700px;
   height: 200px;
   margin: auto;
+  background-image: url(img/village.gif);
+  background-size: 700px 200px;
   border:  1px solid black;
   padding: 0px;
 
 }
 
 #nezuko{
-  width:100px;
-  height: 100px;
-  background-image: url(img/nezuko_walking.png);
-  background-size: 100px 100px;
+  width:70px;
+  height: 70px;
+  background-image: url(img/nezuko_running.gif);
+  background-size: 70px 70px;
   position: relative;
-  top:100px;
-  left: -20px;
+  top:130px;
+  left: -10px;
 }
 
 .jump{
@@ -44,7 +46,7 @@
   width: 80px;
   height: 80px;
   position: relative;
-  top: 45px;
+  top: 75px;
   left: 740px;
 
   background-image: url("img/snake_monster.png");
