Change on chihiro

--- a/dino_game.css
+++ b/dino_game.css
@@ -12,7 +12,7 @@
 #nezuko{
   width:70px;
   height: 70px;
-  background-image: url(img/nezuko_running.gif);
+  background-image: url(img/Chihiro.gif);
   background-size: 70px 70px;
   position: relative;
   top:130px;
