--- a/dino_game.css
+++ b/dino_game.css
@@ -2,7 +2,7 @@
   width: 700px;
   height: 200px;
   margin: auto;
-  background-image: url(img/village.gif);
+  background-image: url(img/japanese_background.jpg);
   background-size: 700px 200px;
   border:  1px solid black;
   padding: 0px;
@@ -10,13 +10,13 @@
 }
 
 #nezuko{
-  width:70px;
-  height: 70px;
+  width:100px; /*de base ct tout 70px*/
+  height: 100px;
   background-image: url(img/Chihiro.gif);
-  background-size: 70px 70px;
+  background-size: 100px 100px;
   position: relative;
-  top:130px;
-  left: -10px;
+  top:100px;
+  left: 45px;
 }
 
 .jump{
@@ -31,7 +31,7 @@
     top: 50px;
   }
   50%{
-    top: 10px;
+    top: 0px;
   }
 
   80%{
@@ -43,16 +43,16 @@
 }
 
 #obstacle{
-  width: 80px;
-  height: 80px;
+  width: 40px;
+  height: 40px;
   position: relative;
-  top: 75px;
+  top: 35px;
   left: 740px;
 
-  background-image: url("img/snake_monster.png");
-  background-size: 80px;
+  background-image: url("img/no_face_simple.gif");
+  background-size: 60px;
 
-  animation: block 1s infinite linear;
+  animation: block 4s infinite linear;
 }
 
 @keyframes block{
