--- a/DragdropCR.css
+++ b/DragdropCR.css
@@ -4,5 +4,11 @@
     height: 90px;
     margin: 10px;
     padding: 10px;
-    border: 1px solid black;
+    border: 3px solid #03491d;;
+  }
+
+  .dragdrop_title{
+    font-family: 'DePixel', sans-serif;
+    font-size: 15px;
+    color: #03491d;
   }
