--- a/game.css
+++ b/game.css
@@ -4,57 +4,12 @@
   font-size: 50px;
   color: #03491d;
 }
-/*----------- Drag n Drop----------------*/
-.empty{
-  display: inline-block;
-  height: 160px;
-  width: 160px;
-  margin: 10px;
-  border : 3px solid black;
-  background-color:wheat;
+
+.game_instruction{
+  font-family: 'Fundead BB', sans-serif;
+  font-size: 25px;
+  color: #03491d;
 }
-
-.fills{
-  background-image: url('img/nezuko_walking.png');
-  background-size: 150px 150px;
-  position: relative;
-  height: 150px;
-  width: 150px;
-  top:5px;
-  left:5px;
-  cursor: pointer;
-}
-
-  #icon1{
-  background-image: url('img/nezuko_walking.png');
-  background-size: 150px 150px;
-  position: relative;
-  height: 150px;
-  width: 150px;
-  top:5px;
-  left:5px;
-  cursor: pointer;
-  }
-
-  #icon2{
-    background-image: url('img/zenitsu.png');
-    background-size: 150px 150px;
-    position: relative;
-    height: 150px;
-    width: 150px;
-    top:5px;
-    left:5px;
-    cursor: pointer;
-    }
-
-  .hold{
-    border: solid #ccc 4px;
-  }
-
-  .hovered{
-    background: #f4f4f4;
-    border-style: dashed;
-  }
 
   /*--------- Character front page ----------*/
   .container_perso {
@@ -103,6 +58,7 @@
   font-weight: 700;
   letter-spacing: .8px;
   line-height: 20px;
+  margin-top: 10px;
   overflow: visible;
   padding: 13px 16px;
   text-align: center;
@@ -113,7 +69,7 @@
   user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-  width: 120px;
+  width: 130px;
 }
 
 .find-state:after {
@@ -156,6 +112,7 @@ input[type=text], select, textarea {
   margin-top: 6px;
   resize: vertical;
 }
+
 
 .fname_label{
   font-family: 'Fundead BB';
@@ -232,4 +189,55 @@ input[type=text], select, textarea {
     left: -40px;
   }
 
+}
+
+/*------------ HALL OF FAME ---------------*/
+
+.score_title{
+  font-family: 'DePixel', sans-serif;
+  font-size: 40px;
+  color: #03491d;
+}
+
+table {  
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  font-size: 15px;
+  border-collapse: collapse;
+ 
+}
+
+th, tfoot td {
+  height: 25px;
+  font-size: 15px;
+  color: white;
+  background: #03491d;
+  border: solid #acdbf1;
+}
+
+th {
+  font-family: 'DePixel', sans-serif; 
+  font-size: 15px;
+  padding: 5px;
+}
+
+td {
+  font-family: 'DePixel', sans-serif; 
+  font-size: 15px;
+
+}
+
+tbody tr:nth-child(odd){
+  background: #acdbf1;
+}
+
+tbody tr:nth-child(even) {
+  background: #6decafcc;
+}
+
+
+footer {
+  text-align: right;
+  font-family: 'DePixel', sans-serif;
 }
