--- a/game.css
+++ b/game.css
@@ -256,10 +256,15 @@ footer {
 
 @import url('http://fonts.cdnfonts.com/css/depixel');
 
+#p1{
+  padding-top: 20px;
+  color: #03491d;
+}
+
 .body_alert {
   background-image: url('/img/cemetery.png');
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-size: 100%;
+  background-repeat: inherit;
 }
 
 *{
@@ -299,7 +304,7 @@ body{
   background: #f2f2f2;
   text-align: center;
   align-items: center;
-  padding: 40px;
+  padding: 30px;
   border: 1px solid #b3b3b3;
   box-shadow: 0px 5px 10px #03491d;
   /* z-index: 9999; */
